# magic_eyes

./: .gitignore  CMakeLists.txt  LICENSE  install_libtorch_linux.sh
src/: main.cpp
